--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,12 +38,18 @@ a{
 /*  position: relative;*/
 }
 a:hover{
-  color:#FFD731;
+  // color:#FFD731;
   text-decoration:none;
 }
 body{
   font-family: "Lucida Sans Unicode", "Lucida Grande", Arial, Helvetica, "ヒラノ角ゴ Pro W3", "Hiragino Kaku Gothic Pro", "メイリオ", Meiryo, Osaka, "ＭＳ Ｐゴシック", sans-serif;
   line-height: 1.5;
+}
+button{
+  // 背景色を黒に指定
+  background-color: #fff;
+  // submitボタンのを枠を非表示にする
+  border-style: none;
 }
 .clearfix::after{
   content:"";
@@ -85,14 +91,23 @@ body{
   margin-top:10px;
   line-height: 60px;
 }
+.logo-box{
+  padding: 0.2em 0.5em;
+  margin: 0em 0;
+  background: #d6ebff;
+  box-shadow: 0px 0px 0px 10px #d6ebff;
+  border: dashed 2px white;
+  float:left;
+}
 .header-logo{
   // background-image: url(img/logo.png);
   // background-size:cover;
   // background-position: center;
-  height:40px;
-  width:100px;
-  background-color:yellow;
-  float:left;
+  color:#fff;
+  font-size:15px;
+  font-weight:600;
+  margin: 0;
+  padding: 0;
 }
 
 .list{
@@ -255,7 +270,10 @@ body{
   margin:30px auto;
   line-height:1.65;
 }
-
+.body-content-mylist{
+  width:1200px;
+  margin:0 auto;
+}
 #notice{
   font-size: 18px;
   font-weight:700;
@@ -313,22 +331,33 @@ body{
 .search{
   width:450px;
 }
-#form{
+.form{
   position:relative;
   padding:27px;
 }
-#sbox{
+.sbox{
   height:50px;
   padding:0 10px;
   position:absolute;
   left:0;
   top:0;
-  width:400px!important;
+  width:200px;
   border-radius:25px;
   border:solid 3px #eaeaea;
   outline: 0;
 }
-#sbtn{
+.sbox-2{
+  height:50px;
+  padding:0 10px;
+  position:absolute;
+  right:1;
+  top:0;
+  width:100px;
+  border-radius:25px;
+  border:solid 3px #eaeaea;
+  outline: 0;
+}
+.sbtn{
   height: 50px;
   position: absolute;
   left:350px;
@@ -341,13 +370,14 @@ body{
   outline: 0;
   width:50px;
 }
-#sbtn:hover{
+.sbtn:hover{
 background:#eaeaea;
 color:#7fbfff;
 }
+
 .mushimegane{
   position: absolute;
-  left:17px;
+  left:370px;
   top: 18px;
 }
 
@@ -480,7 +510,20 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
   font-size:15px;
   font-weight:600;
 }
-.acctive{
+.addlist2{
+  display:block;
+  float:right;
+  margin-right:20px;
+  font-size:25px;
+  color:#f95f92;
+  margin-top:60px;
+}
+.addlist2::after{
+  content:'マイリストに追加済み';
+  font-size:15px;
+  font-weight:600;
+}
+.addlist2::hover{
   color:#f95f92;
 }
 .cate-logo{
@@ -593,6 +636,10 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 }
 .list-a-box{
   text-align:right;
+}
+.mylist-a::hover{
+  color:#FFD731;
+  text-decoration: none;
 }
 /*user-show edit*/
 .prof-head{
