--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -38,15 +38,15 @@
         <ul class="list">
           <li class="item">
             <!-- 保育園の追加 -->
-            <%= link_to " ",new_nurseries_path, class: "item-a a7 fas fa-map-marker-alt" %>
+            <%= link_to "",new_nurseries_path, class: "item-a a7 fas fa-home" %>
           </li>
           <li class="item">
             <!-- ユーザー 一覧 -->
-            <%= link_to " ", users_path, class: "item-a a8 fas fa-heart" %>
+            <%= link_to "", users_path, class: "item-a a8 fas fa-users" %>
           </li>
           <li class="item">
             <!-- ログアウト -->
-            <%= link_to " ", destroy_admin_session_path, method: :delete, class: "item-a a9 fas fa-heart" %>
+            <%= link_to "", destroy_admin_session_path, method: :delete, class: "item-a a9 fas fa-sign-out-alt" %>
           </li>
         </ul>
       </nav>
