--- a/app/views/nurseries/new.html.erb
+++ b/app/views/nurseries/new.html.erb
@@ -13,7 +13,7 @@
 	</div>
 	<div class="field">
 		<%= f.label :category, "施設区分" %>
-		<%= f.text_field :category, class: "" %>
+		<%= f.select :category, [["認可", "認可"], ["認証", "認証"], ["認可外", "認可外"], ["その他", "その他"]],  :include_blank => true, class: 'sbox-2 btn btn-default' %>
 	</div>
 	<div class="field">
 		<%= f.label :nearst, "最寄り駅" %>
