--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -162,6 +162,7 @@
           "lat": <%= nursery.latitude %>,
           "lng": <%= nursery.longitude %>,
           "picture": {
+            "url": 'https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png',
             "width":  32,
             "height": 32
           },
