--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -129,7 +129,15 @@
         </div>
 
         <!-- マップ実装位置 -->
-          <div id="map" class="map-area" style='width: 100%; height: 600px;'></div>
+
+        <style type="text/css">
+          #map {
+                  height: 600px;
+                  width: 100%;
+                }
+        </style>
+        <div id="map"></div>
+        <div id="route" style="width: 500px; height: 200px;overflow: scroll"></div>
       </div>
 
         <div class="nursery-area">
@@ -142,48 +150,93 @@
     </div>
   </div>
 </div>
-<!--
-<script type="text/javascript">
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-      markers = handler.addMarkers(<%=raw @hash.to_json %>);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-    });
-</script> -->
 
 <script type="text/javascript">
-    handler = Gmaps.build('Google');
-    handler.buildMap({ provider: {}, internal: {id: 'map'}}, function(){
-      markers = handler.addMarkers([
+// function initMap() {
 
-      <% @nurseries.each do |nursery| %>
-        {
-          "lat": <%= nursery.latitude %>,
-          "lng": <%= nursery.longitude %>,
-          "picture": {
-            "url": 'https://addons.cdn.mozilla.net/img/uploads/addon_icons/13/13028-64.png',
-            "width":  32,
-            "height": 32
-          },
-          "infowindow": '<%= link_to nursery.name, nurseries_path(nursery) %>',
-        },
-      <% end %>
-      <% if  user_signed_in? %>
+//   var test ={lat: <%= @user.latitude %>, lng: <%= @user.longitude %>};
+//   var map = new google.maps.Map(document.getElementById('map'), {
+//     zoom: 15,
+//     center: test
+//   });
+//   var transitLayer = new google.maps.TransitLayer();
+//   transitLayer.setMap(map);
 
-      {
-        "lat": <%= @user.latitude %>,
-        "lng": <%= @user.longitude %>,
-        "picture": {
-          "width":  32,
-          "height": 32
-        },
-        "infowindow": '<%= @user.name %>'
-      }
+//   var contentString = '住所：<%= @user.address %>';
+//   var infowindow = new google.maps.InfoWindow({
+//     content: contentString
+//   });
 
-      <% end %>
-    ]);
-      handler.bounds.extendWith(markers);
-      handler.fitMapToBounds();
-    });
+//   var marker = new google.maps.Marker({
+//     position:test,
+//     map: map,
+//     title: contentString
+//   });
+
+//   marker.addListener('click', function() {
+//     infowindow.open(map, marker);
+//   });
+// }
+
+let map;
+let marker = [];
+let infoWindow = [];
+let markerData = [
+
+<% if  user_signed_in? %>
+  {
+      name: '<%= @user.name %>',
+      lat: <%= @user.latitude %>,
+      lng: <%= @user.longitude %>,
+      ico: 'assets/icon.png'
+ },
+<% end %>
+
+<% @nurseries.each do |nursery| %>
+  {
+      name: '<%= nursery.name %>',
+      lat: <%= nursery.latitude %>,
+      lng: <%= nursery.longitude %>,
+      ico: 'assets/icon2.png'
+  },
+<% end %>
+
+];
+
+function initMap() {
+ // 地図の作成
+    let mapLatLng = new google.maps.LatLng({lat: markerData[0]['lat'], lng: markerData[0]['lng']});
+    map = new google.maps.Map(document.getElementById('map'), {
+    center: mapLatLng,
+    zoom: 14
+   });
+
+ // マーカー毎の処理
+ for (let i = 0; i < markerData.length; i++) {
+        let image = ({
+                    url: markerData[i].ico,
+                    scaledSize: new google.maps.Size(50,50)
+                    });
+        markerLatLng = new google.maps.LatLng({lat: markerData[i]['lat'], lng: markerData[i]['lng']});
+        marker[i] = new google.maps.Marker({
+                                            position: markerLatLng,
+                                            map: map,
+                                            icon: image
+                                           });
+
+     infoWindow[i] = new google.maps.InfoWindow({
+                                                 content: '<div class="map">' + markerData[i]['name'] + '</div>'
+                                               });
+
+     markerEvent(i); // マーカーにクリックイベントを追加
+ }
+}
+// マーカーにクリックイベントを追加
+function markerEvent(i) {
+    marker[i].addListener('click', function() { // マーカーをクリックしたとき
+    infoWindow[i].open(map, marker[i]); // 吹き出しの表示
+  });
+}
 </script>
+
+<script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfiov9mIsmVcZyqJb-jQiTRTS_2rFY9gM&callback=initMap"></script>
