ルート検索、時間表示、カテゴリー検索

--- a/app/views/nurseries/show.html.erb
+++ b/app/views/nurseries/show.html.erb
@@ -37,7 +37,7 @@
       <div class="col-sm-8 main-content">
 
         <div class="map-area">
-          <div id="map2" style="width: 720px; height: 400px;"></div>
+          <div id="map2" style="width: 720px; height: 600px;"></div>
         </div>
         <div class="button-area">
           <%= link_to "　編集する　",edit_nurseries_path(@nursery), class:"btn btn-lg btn-info"%>
@@ -130,7 +130,7 @@
             </thead>
           </table>
           <% end %>
-          <p>※上記はあくまで一例です。費用に関する詳細は、保育園に直接お問い合わせください。</p>
+          <p>※上記はあくまで公式サイトから引用した一例です。詳細は、保育園の公式サイトをご覧になるか、保育園に直接お問い合わせください。</p>
         </div>
 
       </div>
@@ -139,7 +139,7 @@
   </div>
 </div>
 
-<script type="text/javascript">
+<!-- <script type="text/javascript">
 
 let map;
 let marker = [];
@@ -198,32 +198,51 @@ function markerEvent(i) {
     infoWindow[i].open(map, marker[i]); // 吹き出しの表示
   });
 }
+</script> -->
 
-// function getRoute(latlng){
-//     var request = {
-//         origin:  {
 
-//       lat: <%= @user.latitude %>,
-//       lng: <%= @user.longitude %>,
+<script type="text/javascript">
+let startLatLng = [<%= @user.latitude %>, <%= @user.longitude %>];
+let targetLatLng = [<%= @nursery.latitude %>, <%= @nursery.longitude %>];
+let map;
+function initMap() {
+    // ルート検索の条件
+    let request = {
+        origin: new google.maps.LatLng(startLatLng[0], startLatLng[1]), // 出発地
+        destination: new google.maps.LatLng(targetLatLng[0], targetLatLng[1]), // 目的地
+        waypoints: [], // 経由地点
+        travelMode: google.maps.DirectionsTravelMode.WALKING, // 交通手段(歩行。DRIVINGの場合は車)
+    };
 
-//   }, //入力地点の緯度、経度
-//         destination:  {
+    // マップの生成
+    let map = new google.maps.Map(document.getElementById("map2"), {
+        center: new google.maps.LatLng(startLatLng[0], startLatLng[1]), // マップの中心
+        zoom: 14 // ズームレベル
+    });
 
-//       lat: <%= @nursery.latitude %>,
-//       lng: <%= @nursery.longitude %>,
+    let d = new google.maps.DirectionsService(); // ルート検索オブジェクト
+    let r = new google.maps.DirectionsRenderer({ // ルート描画オブジェクト
+        map: map, // 描画先の地図
+        preserveViewport: true, // 描画後に中心点をずらさない
+        // suppressMarkers: true 
+    });
+    // ルート検索
+    d.route(request, function(result, status){
+        if (status == google.maps.DirectionsStatus.OK) {
+            // ルートの所要時間
+            var time = result.routes[0].legs[0].duration.text;
+            // ルートの距離
+            var dist = result.routes[0].legs[0].distance.text;
+            result.routes[0].legs[0].start_address = '<%= @user.name %>';
+            result.routes[0].legs[0].end_address = '<%= @nursery.name %>' + '　(家からの距離：' + dist + ' /所要時間：'+ time +' )';
+            r.setMap(map);
+            r.setDirections(result);
+        }
+    });
+}
 
-//   } //到着地点の緯度、経度
-//         travelMode: google.maps.DirectionsTravelMode.WALKING //ルートの種類
-//     }
-//     directionsService.route(request,function(result, status){
-//         toRender(result);
-//     });
-// }
-// function toRender(result){
-//     directionsDisplay = new google.maps.DirectionsRenderer();
-//     directionsDisplay.setDirections(result); //取得した情報をset
-//     directionsDisplay.setMap(map2); //マップに描画
-// }
+
+
 </script>
 
 <script async defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCfiov9mIsmVcZyqJb-jQiTRTS_2rFY9gM&callback=initMap"></script>
