--- a/app/views/nurseries/index.html.erb
+++ b/app/views/nurseries/index.html.erb
@@ -106,27 +106,28 @@
         <div class="index-header clearfix">
           <div class="index-header-box search crearfix">
             <%= search_form_for(@search,:url => { :controller => :nurseries, :action => :index } ) do |f| %>
-              <%= f.search_field :name_cont, class: "sbox", placeholder: '保育園名、地名で検索' %>
-              <%= f.select :category, {"認可" => "認可","認証" => "認証","認可外" => "認可外","その他" => "その他"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
-              <%= f.collection_select :category, Nursery.all, :category, :category %>
+              <%= f.search_field :name_or_address_or_nearest_or_category_cont, class: "sbox", placeholder: '保育園名、住所、最寄り駅で検索' %>
+
+              <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外","その他" => "その他"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
               <%= f.submit '', :class =>"sbtn" %>
               <i class="fas fa-search mushimegane"></i>
             <% end %>
           </div>
 <!--           <div class="index-header-box category">
             <ul class="list-cate">
-              <li class="item-cate btn btn-info">認可</li>
-              <li class="item-cate btn btn-info">認証</li>
-              <li class="item-cate btn btn-info">認可外</li>
+              <li class="" ><%= link_to "認可", ninka_index_path, class: "item-cate btn btn-info" %></li>
+              <li class="" ><%= link_to "認証", ninsyo_index_path, class: "item-cate btn btn-info" %></li>
+              <li class="" ><%= link_to "認可外", gai_index_path, class: "item-cate btn btn-info" %></li>
+              <li class="" ><%= link_to "その他", hoka_index_path, class: "item-cate btn btn-info" %></li>
             </ul>
           </div> -->
         </div>
-        <div class="route">
+<!--         <div class="route">
           <ul class="list-route">
             <li class="item-route">自宅</li>
             <li class="item-route">保育園</li>
           </ul>
-        </div>
+        </div> -->
 
         <!-- マップ実装位置 -->
 
@@ -137,7 +138,6 @@
                 }
         </style>
         <div id="map"></div>
-        <div id="route" style="width: 500px; height: 200px;overflow: scroll"></div>
       </div>
 
         <div class="nursery-area">
