--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -38,7 +38,7 @@ a{
 /*  position: relative;*/
 }
 a:hover{
-  // color:#FFD731;
+  color:#FFD731;
   text-decoration:none;
 }
 body{
@@ -269,10 +269,6 @@ button{
   width:1080px;
   margin:30px auto;
   line-height:1.65;
-}
-.body-content-mylist{
-  width:1200px;
-  margin:0 auto;
 }
 #notice{
   font-size: 18px;
@@ -645,6 +641,15 @@ background: repeating-linear-gradient(-45deg, #67d1d6, #67d1d6 2px, #fff 2px, #f
 .mylist-a::hover{
   color:#FFD731;
   text-decoration: none;
+}
+.memo{
+  margin-top:30px;
+}
+.memo-form{
+  width:100%;
+  height:500px;
+  padding: 0.5em 1em;
+  border: double 5px #4ec4d3;
 }
 /*user-show edit*/
 .prof-head{
