--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -13,7 +13,7 @@
         <ul class="list">
           <li class="item">
             <!-- スポット登録 -->
-            <%= link_to " ","#", class: "item-a a1 fas fa-map-marker-alt" %>
+            <%= link_to " ", spots_path, class: "item-a a1 fas fa-map-marker-alt" %>
           </li>
           <li class="item">
             <!-- マイリスト -->
