--- a/app/views/shared/_header.html.erb
+++ b/app/views/shared/_header.html.erb
@@ -1,4 +1,3 @@
-
 <header class="header">
   <div class="header-content">
     <%= link_to root_path do %>
@@ -6,6 +5,15 @@
         <p class="header-logo">WithYou</p>
       </div>
     <% end %>
+    <div class="search-box crearfix">
+      <%= search_form_for(@search,:url => { :controller => :nurseries, :action => :index } ) do |f| %>
+        <%= f.search_field :name_or_address_or_nearest_or_category_cont, class: "sbox", placeholder: '保育園名、住所、最寄り駅で検索' %>
+
+        <%= f.select :category_eq, {"認可" => "認可","認証" => "認証","認可外" => "認可外","その他" => "その他"}, {include_blank: true}, {class: 'sbox-2 btn btn-default'} %>
+        <%= f.submit '', :class =>"sbtn" %>
+        <i class="fas fa-search mushimegane"></i>
+      <% end %>
+    </div>
 
     <% if  user_signed_in? %>
 
@@ -25,7 +33,7 @@
             <ul class="mypage-ul">
               <li class="mypage-li li-gray"><%= link_to  current_user.name, user_path(current_user.id), class: "fas fa-user mypage-a" %></li>
               <li class="mypage-li"><%= link_to "マイリスト", list_items_path(current_user.id), class: "fas fa-heart mypage-a" %></li>
-              <li class="mypage-li"><%= link_to "スポット編集", edit_spot_path(current_user.id), class: "fas fa-map mypage-a" %></li>
+              <li class="mypage-li"><%= link_to "スポット編集", spots_path, class: "fas fa-map mypage-a" %></li>
               <li class="mypage-li"><%= link_to "ログアウト", users_sign_out_path, method: :delete, class: "fas fa-sign-out-alt mypage-a" %></li>
             </ul>
           </li>
