いらないmodel controller削除

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
 
   <body>
   	<%= render 'shared/header' %>
+    <div class="header-area"></div>
     <%= yield %>
     <%= render 'shared/footer' %>
   </body>
