--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -86,6 +86,9 @@ button{
   position: fixed;
   z-index:10;
 }
+.header-area{
+  height:120px;
+}
 .header-content{
   width:1080px;
   margin:0 auto;
@@ -389,7 +392,7 @@ color:#7fbfff;
   padding:10px 0;
 }
 #map {
-        height: 700px;
+        height: 600px;
         width: 100%;
       }
 
